--- a/Proyecto/Acme-Poll/.settings/org.eclipse.wst.common.component
+++ b/Proyecto/Acme-Poll/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Acme-Raffle-2.0">
+    <wb-module deploy-name="Acme-Poll-2.0">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="java-output-path" value="/Acme-Raffle/target/classes"/>
+        <property name="java-output-path" value="/Acme-Poll/target/classes"/>
         <property name="context-root" value="Acme-Poll"/>
     </wb-module>
 </project-modules>
